[gd_scene load_steps=34 format=3 uid="uid://cjxwv541fpgro"]

[ext_resource type="Script" uid="uid://defabqc73l8al" path="res://Scenes/Enemy/enemy.gd" id="1_he4n7"]
[ext_resource type="Texture2D" uid="uid://cpbslcbu7oc74" path="res://Scenes/Enemy/OtroTornilio/tornillo_elite_insano_sheet.png" id="2_he4n7"]
[ext_resource type="Script" uid="uid://bv7v38inme6cd" path="res://Scenes/Enemy/player_raycast.gd" id="3_78alm"]
[ext_resource type="Script" uid="uid://be2m0b88hq4sh" path="res://Scenes/Enemy/States/state_machine.gd" id="4_3ntla"]
[ext_resource type="Script" uid="uid://co8y6ovg8sdxv" path="res://Scenes/Enemy/States/EnemyIdle.gd" id="5_6n6ne"]
[ext_resource type="Script" uid="uid://blms38047wfp" path="res://Scenes/Enemy/States/EnemyFollow.gd" id="6_sem0c"]
[ext_resource type="Script" uid="uid://cda32kltu7s85" path="res://Scenes/Enemy/gravity.gd" id="7_k8sfq"]
[ext_resource type="Script" uid="uid://dvupaivofte2e" path="res://Util/Components/hitbox.gd" id="8_vycf4"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://cs76moh7ofl4i" path="res://Scenes/Enemy/Animations/enemy_statemachine.tres" id="9_uy5r2"]
[ext_resource type="Script" uid="uid://b38lmbn7ltwey" path="res://Scenes/Enemy/animation.gd" id="10_2j7y6"]
[ext_resource type="Script" uid="uid://t6fxc7730g3w" path="res://Scenes/Enemy/OtroTornilio/animation_tree.gd" id="10_3ntla"]
[ext_resource type="Script" uid="uid://cjeskr7slierw" path="res://Scenes/Enemy/OtroTornilio/player_area_enem2.gd" id="11_78alm"]
[ext_resource type="PackedScene" uid="uid://dgiikai18fwx2" path="res://Scenes/Enemy/hit_particles.tscn" id="12_5k2cy"]
[ext_resource type="Script" uid="uid://cv2ruu1nd3v01" path="res://Scenes/Enemy/health_label.gd" id="13_3xmbb"]
[ext_resource type="Script" uid="uid://cndrb11mvhk5r" path="res://Scenes/Enemy/health.gd" id="14_3adgx"]
[ext_resource type="Script" uid="uid://dk08pmfvcstly" path="res://Scenes/Enemy/item_dropper.gd" id="15_ia471"]
[ext_resource type="PackedScene" uid="uid://b6iffklx5lsst" path="res://Scenes/Player/Upgrades/FasterShooting/faster_shooting_upgrade.tscn" id="16_eregb"]
[ext_resource type="PackedScene" uid="uid://bixm5c031ik6c" path="res://Scenes/Player/Upgrades/MoreDamage/MoreDamage.tscn" id="17_78alm"]
[ext_resource type="PackedScene" uid="uid://egcg0wx40wmd" path="res://Scenes/Player/Upgrades/MovementSpeed/movement_speed.tscn" id="18_3ntla"]
[ext_resource type="PackedScene" uid="uid://cldef86ynji08" path="res://Scenes/Player/Upgrades/Health/get_health_upgrade.tscn" id="20_6n6ne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xf6vi"]
size = Vector2(21, 28.42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiqm3"]
size = Vector2(20, 26)

[sub_resource type="Animation" id="Animation_kiqm3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_beese"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_1vi6b"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_6j3ko"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 0), Vector2i(7, 0), Vector2i(9, 0), Vector2i(11, 0)]
}

[sub_resource type="Animation" id="Animation_2chwy"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(6, 0), Vector2i(8, 0), Vector2i(10, 0)]
}

[sub_resource type="Animation" id="Animation_r1w2j"]
resource_name = "white"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_beese"]
_data = {
&"RESET": SubResource("Animation_kiqm3"),
&"idle_left": SubResource("Animation_beese"),
&"idle_right": SubResource("Animation_1vi6b"),
&"walk_left": SubResource("Animation_6j3ko"),
&"walk_right": SubResource("Animation_2chwy"),
&"white": SubResource("Animation_r1w2j")
}

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_6j3ko"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_2chwy"]
nodes/AnimationNodeStateMachine/node = ExtResource("9_uy5r2")
nodes/AnimationNodeStateMachine/position = Vector2(140, 40)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_6j3ko")
nodes/TimeScale/position = Vector2(420, 60)
nodes/output/position = Vector2(580, 80)
node_connections = [&"TimeScale", 0, &"AnimationNodeStateMachine", &"output", 0, &"TimeScale"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beese"]
size = Vector2(48.125, 111.184)

[sub_resource type="LabelSettings" id="LabelSettings_r1w2j"]
font_size = 11

[node name="Enemy2" type="CharacterBody2D"]
scale = Vector2(1.6, 1.6)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_he4n7")
movement_speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13.125)
scale = Vector2(-0.383, 0.406)
texture = ExtResource("2_he4n7")
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0600004, -14.21)
shape = SubResource("RectangleShape2D_xf6vi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 30.0
target_desired_distance = 20.0

[node name="PlayerRaycast" type="Node" parent="."]
script = ExtResource("3_78alm")

[node name="Head" type="Node2D" parent="."]
position = Vector2(-0.0600004, -21.92)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "enemy")]
script = ExtResource("4_3ntla")
initial_state = NodePath("Idle")
enemy = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("navigation_agent")]
script = ExtResource("5_6n6ne")
wander_radius = 1000.0
wander_time_window = 4.0
navigation_agent = NodePath("../../NavigationAgent2D")
metadata/_custom_type_script = "uid://co8y6ovg8sdxv"

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource("6_sem0c")
metadata/_custom_type_script = "uid://blms38047wfp"

[node name="FollowTimer" type="Timer" parent="StateMachine/Follow"]

[node name="Gravity" type="Node" parent="."]
script = ExtResource("7_k8sfq")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0
script = ExtResource("8_vycf4")
metadata/_custom_type_script = "uid://dvupaivofte2e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_kiqm3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_beese")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_2chwy")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/AnimationNodeStateMachine/Idle/blend_position = -0.00332224
parameters/AnimationNodeStateMachine/Walk/blend_position = -0.111296
parameters/TimeScale/scale = 1.0
script = ExtResource("10_3ntla")

[node name="Animation" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "sprite", "animation_player", "enemy_hitbox")]
script = ExtResource("10_2j7y6")
animation_tree = NodePath("../AnimationTree")
sprite = NodePath("../Sprite2D")
animation_player = NodePath("../AnimationPlayer")
enemy_hitbox = NodePath("../Hitbox")

[node name="Timer" type="Timer" parent="Animation"]
wait_time = 0.2
one_shot = true

[node name="PlayerArea" type="Area2D" parent="."]
scale = Vector2(8.525, 1.9)
collision_layer = 0
collision_mask = 1048576
script = ExtResource("11_78alm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(-0.312505, -8.22368)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_beese")

[node name="AttackTimer" type="Timer" parent="PlayerArea"]
one_shot = true

[node name="BulletDir" type="Marker2D" parent="PlayerArea"]
position = Vector2(-1.32, -6)

[node name="HitParticles" parent="PlayerArea" instance=ExtResource("12_5k2cy")]

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -48.75
offset_right = 20.0
offset_bottom = -8.75
text = "100"
label_settings = SubResource("LabelSettings_r1w2j")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("13_3xmbb")
full_health_color = Color(6.13667e-06, 0.549889, 3.85046e-07, 1)
mid_health_color = Color(1, 0.376471, 0, 1)
low_health_color = Color(0.780694, 4.54836e-06, 4.81307e-07, 1)
full_health = 80.0
mid_health = 50.0
low_health = 20.0

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("hitbox", "animation_player")]
script = ExtResource("14_3adgx")
hitbox = NodePath("../Hitbox")
animation_player = NodePath("../AnimationPlayer")
max_health = 50.0

[node name="ItemDropper" type="Node" parent="."]
script = ExtResource("15_ia471")
item_pool = Array[PackedScene]([ExtResource("16_eregb"), ExtResource("17_78alm"), ExtResource("18_3ntla"), ExtResource("20_6n6ne")])

[connection signal="damaged" from="Hitbox" to="Health" method="on_damaged"]
[connection signal="died" from="Health" to="ItemDropper" method="_on_health_died"]
[connection signal="health_changed" from="Health" to="HealthLabel" method="_on_health_changed"]
